--- a/src/analysis/visualization/DataVisualization_Parts_cable.ipynb
+++ b/src/analysis/visualization/DataVisualization_Parts_cable.ipynb
@@ -77,23 +77,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'hp' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m mat_cable_cp \u001b[38;5;241m=\u001b[39m (mat_cable\u001b[38;5;241m.\u001b[39mpipe(\u001b[43mhp\u001b[49m\u001b[38;5;241m.\u001b[39mstart_pipeline)\n\u001b[0;32m      2\u001b[0m  \u001b[38;5;241m.\u001b[39mpipe(php\u001b[38;5;241m.\u001b[39mrename_column,column_name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUnnamed: 0\u001b[39m\u001b[38;5;124m\"\u001b[39m,value\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSAP_MATNR\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      3\u001b[0m  \u001b[38;5;241m.\u001b[39mpipe(php\u001b[38;5;241m.\u001b[39mdrop_columns,column_names\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUnnamed: 4\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUnnamed: 5\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUnnamed: 6\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUnnamed: 7\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUnnamed: 8\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUnnamed: 9\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUnnamed: 11\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUnnamed: 12\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUnnamed: 13\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n\u001b[0;32m      4\u001b[0m  \u001b[38;5;241m.\u001b[39mpipe(php\u001b[38;5;241m.\u001b[39mfilterNaN_rows, column_names\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLeitungsart TSG / TSZ\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSAP_MATNR\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n\u001b[0;32m      5\u001b[0m  )\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'hp' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "mat_cable_cp = (mat_cable.pipe(hp.start_pipeline)\n",
+    "mat_cable_cp = (mat_cable.pipe(php.start_pipeline)\n",
     " .pipe(php.rename_column,column_name=\"Unnamed: 0\",value=\"SAP_MATNR\")\n",
     " .pipe(php.drop_columns,column_names=[\"Unnamed: 4\",\"Unnamed: 5\",\"Unnamed: 6\",\"Unnamed: 7\",\"Unnamed: 8\",\"Unnamed: 9\",\"Unnamed: 11\",\"Unnamed: 12\",\"Unnamed: 13\"])\n",
     " .pipe(php.filterNaN_rows, column_names=[\"Leitungsart TSG / TSZ\", \"SAP_MATNR\"])\n",
